manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hooks
  namespace: dispatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: hooks
    spec:
      containers:
        - name: hooks
          imagePullPolicy: Always
          image: meyskens/dispatch.sh-hooks:arm64-master
          ports:
            - containerPort: 80
