manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hooks
  namespace: dispatch
spec:
  selector:
    app: hooks
  ports:
    - name: http
      port: 80
      targetPort: 80
